@@ -2,7 +2,8 @@
 # $Header$
 #
 
-use 5.008;
+BEGIN { require 5.008; }
+
 use strict;
 use warnings;
 use ExtUtils::MakeMaker;
@@ -191,10 +192,8 @@ __EOW__
 
 =cut
 
-package MY;
-
 # rule to build the documentation
-sub postamble
+sub MY::postamble
 {
 	require 'MakeHelper.pm';
 	return "
@@ -211,7 +210,7 @@ build/podindex :: \$(INST_LIB)/Glib/GenPod.pm
 "
 	     . Glib::MakeHelper->postamble_clean ()
 	     . Glib::MakeHelper->postamble_docs_full (
-			DEPENDS => $main::glib,
+			DEPENDS => $glib,
 			DOCTYPES => 'doctypes',
 			COPYRIGHT_FROM => 'copyright.pod',
 	       )
